# minimal-contract

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
